2007-09-16  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-reportbug): Correct alias
	definition.

2007-09-06  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyirc.el
	(tinyirc-:pastebot-config-default-content): New.
	(tinyirc-pastebot-install-example-servers): Use
	`tinyirc-:pastebot-config-default-content'.
	(tinyirc-pastebot-send-region): Do not require match for
	service name.
	(tinyirc-:pastebot-service-list-time-stamp): New.
	(tinyirc-pastebot-service-list-set): Record
	`tinyirc-:pastebot-service-list-time-stamp'.
	(tinyirc-pastebot-service-file-name): New.
	(tinyirc-pastebot-service-list-from-file): Use
	`tinyirc-pastebot-service-file-name'.
	(tinyirc-pastebot-service-file-name-changed-p): New.
	(tinyirc-pastebot-service-list): Automatially notice
	changes to pastebot service file and update cache as needed.

	* tiny/tinydebian.el:
	(top level::Quick start): Announce `tinydebian-reportbug'.
	(bottom): Added alias command `tinydebian-reportbug'.

2007-09-04  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el: (at the end): removed local variables for
	security reasons.

2007-08-29 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyirc.el (tinyirc-pastebot-install-example-servers): 2.16
	Correct typo for word 'conflict'.

2007-08-22    <jari.aalto@cante.net>

	* tiny/tinycygwin.el
	(tinycygwin-sysinfo-os-cygwin-dll-version-string): Added string
	" (cygwin1.dll)" to the end.
	(tinycygwin-sysinfo-os-windows): New.
	(tinycygwin-bug-system-info-os-version): Use
	`tinycygwin-sysinfo-os-windows'.

2007-08-04  Jari Aalto  <jaalto A T bongo cante net>

	* tiny/tinydebian.el (tinydebian-package-status-dpkg-S):
	Wrong variable `upstream' => `pkg'
	(tinydebian-bug-system-info-depends): Check null `info'.
	(tinydebian-package-status-apt-cache): New.
	(tinydebian-package-status-main): Use
	`tinydebian-package-status-apt-cache'.
	(tinydebian-bug-report-mail-insert-details): Added error
	checking for `info'. Fixed empty `depends' insert.
